# PrimeIntellect-ai-renderers

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-dev.yml  publish.yml  style.yml  test.yml
docs/: renderer-config.md
examples/: README.md
examples/sglang/: multiturn_generate_sglang.py  online_multiturn_sglang.py
examples/tinker/: multiturn_generate_tinker.py
examples/transformers/: multiturn_generate_transformers.py
examples/vllm/: multiturn_generate_vllm.py
renderers/: __init__.py  base.py  client.py  configs.py  deepseek_v3.py  default.py  glm45.py  glm5.py  gpt_oss.py  kimi_k2.py  kimi_k25.py  laguna_xs2.py  minimax_m2.py  nemotron3.py  parsers.py  parsing.py  qwen3.py  qwen35.py  qwen36.py  qwen3_vl.py
tests/: conftest.py  test_arg_coercion.py  test_bridge.py  test_build_helpers.py  test_client.py  test_content_mask.py  test_gpt_oss_harmony_parity.py  test_is_content.py  test_kimi_k25_tool_schema.py  test_laguna_xs2.py  test_llama_3.py  test_load_tokenizer_fastokens.py  test_message_indices.py  test_message_tool_names.py  test_multimodal.py  test_nemotron3_ultra.py  test_no_transformers.py  test_parse_response.py  test_parse_response_robustness.py  test_parsers.py  test_preserve_thinking.py  test_qwen35_size_coverage.py  test_render_ids.py  test_renderer_config.py  test_renderer_config_parity.py  test_roundtrip.py  test_sampled_mask.py  test_tool_arg_type_preservation.py
