[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "renderers"
# Derived from git tags by hatch-vcs (see [tool.hatch.version] below).
# Untagged commits get PEP 440 dev versions like ``0.1.8.dev3+g4c877be4``
# so any commit is uniquely installable; tagged commits get clean
# release versions like ``0.1.8``.
dynamic = ["version"]
description = "Chat template renderers — deterministic message-to-token conversion for LLM training"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy",
    "tiktoken",
    "jinja2",
    # Used by GptOssRenderer to render and parse harmony tokens. Vendoring
    # OpenAI's reference implementation keeps us byte-identical with vLLM
    # (which also uses it) and saves us mirroring a 330-line Jinja template.
    "openai-harmony>=0.0.8",
    # ``BaseRendererConfig`` inherits from ``pydantic_config.BaseConfig`` so
    # the typed-config surface stays uniform with prime-rl / verifiers config
    # bases. Transitively brings pydantic, which ``renderers.configs`` also
    # imports directly.
    "prime-pydantic-config>=0.3.0.dev83",
]

[project.optional-dependencies]
# ``transformers`` is heavy, and text-only renderers don't need it: construct
# a renderer with your own tokenizer object (e.g. a ``tokenizers``-backed one)
# and render / parse with no ``transformers`` import at all (issue #31). It is
# required only by the ``load_tokenizer`` / ``create_renderer*`` convenience
# helpers, the offset-attribution fallback in ``attribute_text_segments``, and
# the VLM renderers (which need ``AutoProcessor`` image processors). The lazy
# import points raise a clear "install renderers[transformers]" error when it's
# missing — see ``renderers.base._require_transformers``.
#
# ``fastokens`` (Crusoe's Rust BPE; ~10x faster encode) patches
# ``transformers`` inside ``load_tokenizer``, so it travels in the same extra.
transformers = [
    "transformers>=4.50.0",
    "fastokens>=0.2.0",
]

# ``renderers.client`` is a generate client for vLLM's
# ``/inference/v1/generate`` — engine-specific glue, not part of the core
# message↔token contract. It's the only thing that needs the ``openai`` SDK
# (``AsyncOpenAI``) and ``httpx``, so it's opt-in: ``import renderers`` and the
# renderers themselves stay free of HTTP/engine deps. Install this extra to use
# ``from renderers.client import generate``. (A future ``sglang`` client would
# live behind its own extra.)
vllm = [
    "openai>=1.108.1",
    "httpx",
]

[tool.hatch.version]
source = "vcs"
# Tags look like ``renderers-v0.1.8`` (prefix matches the publish.yml
# release contract); strip the prefix to get a PEP 440 version. The
# regex accepts any PEP 440-valid suffix after the prefix so we can
# tag pre-releases like ``renderers-v0.2.0rc1`` later if needed.
tag-pattern = '^renderers-v(?P<version>.+)$'
# Used when building from a context without VCS metadata (e.g. an
# sdist consumed by a downstream that doesn't ship .git). Real
# builds from a checkout get the resolved version; this fallback
# only fires when the resolver has nothing to go on.
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
# Write the resolved version to a Python file so it can be inspected
# at runtime via ``renderers.__version__`` without re-parsing the
# wheel metadata.
version-file = "renderers/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["renderers"]

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "pre-commit",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "ty>=0.0.1a29,<0.0.22",
    # ``transformers`` is an optional extra for consumers (issue #31), but the
    # test suite + type-check exercise the ``load_tokenizer`` / VLM paths, so
    # the dev env always installs it. Mirror of ``[project.optional-dependencies].transformers``.
    "transformers>=4.50.0",
    "fastokens>=0.2.0",
    # ``renderers.client`` deps — opt-in via the ``[vllm]`` extra for consumers,
    # but ``tests/test_client.py`` exercises the client, so the dev env always
    # installs them. Mirror of ``[project.optional-dependencies].vllm``.
    "openai>=1.108.1",
    "httpx",
]

[tool.uv]
exclude-newer = "7 days"
# fastokens 0.2.0 was published on 2026-05-17 and contains the
# ``unpatch_transformers`` fix (crusoecloud/fastokens#32) needed for
# MiniMax-M2's slow→fast tokenizer conversion path. Exempting it from
# the project-wide 7-day cutoff lets the lockfile pick it up immediately
# while the rest of the dependency graph stays gated.
exclude-newer-package = { fastokens = false, "prime-pydantic-config" = false }

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
# Pre-existing diagnostics in v0.1.5 source — downgrade to advisory so CI
# surfaces them without blocking. Tighten back to error as we clean up.
unknown-argument = "warn"
redundant-cast = "ignore"
unresolved-import = "warn"
invalid-argument-type = "warn"
unresolved-attribute = "warn"
invalid-key = "warn"
unsupported-operator = "warn"
invalid-return-type = "warn"
invalid-assignment = "warn"
